# IuvoUnity

./: .gitignore  CMakeLists.txt  IuvoUnity.csproj  IuvoUnity.sln  README.md  bootstrap.sh  setup.bat
ExtensionMethods/: AnimatorExtension.cs  CameraExtensions.cs  GameObjectExtensions.cs
Interfaces/: IStateACondition.cs
Interfaces/UtilityInterfaces/: IBooleanCondition.cs
Properties/: AssemblyInfo.cs  Settings.Designer.cs
StateMachine/: IdleState.cs  State.cs  StateMachine.cs
StateMachine/States/: IdleState.cs  MoveState.cs
helpers/: build_project.bat  check_branch.bat  check_git.bat  commit_experimental.bat  sync_branch.bat  test_and_commit_concrete.bat
scripts/: utilities.sh
src/: Layout_IuvoUnity.txt
src/ExtensionMethods/: ColliderExtensions.cs  GameObjectExtensions.cs  RigidbodyExtensions.cs
src/Interfaces/: IAbility.cs  ICauseReaction.cs  IConditional.cs  IDealDamage.cs  IObservable.cs  IObserver.cs  IReactable.cs  IReactable1.cs  IStateACondition.cs  IStateMachineCondition.cs
src/IuvoAnimation/: AnimationComponents.cs  AnimatorExtensions.cs
src/IuvoBaseClasses/: ObservableClass.cs
src/IuvoDebug/: IuvoDebug.cs
src/IuvoInput/: GravityController.cs  PlayerControls.cs  PlayerInputActionBase.cs  PlayerMoveAction.cs
src/IuvoRPG_ECS/: IuvoRPGComponent.cs
src/IuvoStateMachine/: IStateMachineCondition.cs
src/IuvoTime/: IuvoTime.cs
src/_Animation/: AnimationComponents.cs  AnimatorExtensions.cs  E_AnimationHandler.cs  E_IuvoAnimation.cs
src/_BaseClasses/: DataStructBases.cs
src/_Collider/: BoxColliderExtensions.cs  ColliderExtensions.cs
(+195 files in other folders)
